snapshots/stoat/tui/stoat__test_harness__review_deletion.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: open_review
focused: #1 of 1
mode: review
size: 80x10
---
[0m[33mtest.rs --- 1/1 --- rust[0m               [0m[90m│[0m
[0m[1m[36m│[0m[90m   1 [0m[97mfn a() {}[0m                        [0m[90m│[0m[1m[36m│[0m[90m   1 [0m[97mfn a() {}[0m
[0m[1m[36m│[0m[90m   2 [0m[97mfn [0m[31mold()[0m[97m [0m[31m{}[0m                      [0m[90m│[0m[1m[36m│[0m[90m.....[0m
[0m[1m[36m│[0m[90m   3 [0m[97mfn b() {}[0m                        [0m[90m│[0m[1m[36m│[0m[90m   2 [0m[97mfn b() {}[0m





[0m[1m[30m[46m REV [0m[1m[97m[100m (unnamed) [0m[97m[100m[scratch]                                                       [0m
