snapshots/stoat/tui/stoat__test_harness__review_move_cross_indent.snap
---
source: stoat/src/test_harness.rs
assertion_line: 316
expression: text
---
actions: open_review
focused: #1 of 1
mode: review
size: 100x20
---
[0m[33mnest.rs --- 1/1 --- rust[0m                         [0m[90m│[0m
[0m[1m[36m│[0m[90m.....[0m                                           [0m[90m│[0m[1m[36m│[0m[90m   1 [0m[97mfn outer() [0m[32m{}[0m
[0m[1m[36m│[0m[90m   1 [0m[97mfn outer() {[0m                               [0m[90m│[0m[1m[36m│[0m[90m   2 [0m
[0m[1m[36m│[0m[90m   2 [0m[97m    let [0m[3m[36mrelocated[0m[97m = [0m[3m[36mcompute[0m[97m([0m[3m[36marg1[0m[97m, [0m[3m[36marg2[0m[97m, [0m[3m[36marg[0m[90m│[0m[1m[36m│[0m[90m.....[0m
[0m[1m[36m│[0m[90m   3 [0m[97m}[0m                                          [0m[90m│[0m[1m[36m│[0m[90m   3 [0m[97mfn wrapper() {[0m
[0m[1m[36m│[0m[90m   4 [0m                                           [0m[90m│[0m[1m[36m│[0m[90m   4 [0m[97m    println!("hello");[0m
[0m[1m[36m│[0m[90m.....[0m                                           [0m[90m│[0m[1m[36m│[0m[90m   5 [0m[97m    let [0m[3m[36mrelocated[0m[97m = [0m[3m[36mcompute[0m[97m([0m[3m[36marg1[0m[97m, [0m[3m[36marg2[0m[97m, [0m[3m[36marg3[0m
[0m[1m[36m│[0m[90m   5 [0m[97mfn wrapper() {[0m                             [0m[90m│[0m[1m[36m│[0m[90m   6 [0m[97m}[0m
[0m[1m[36m│[0m[90m   6 [0m[97m    println!("hello");[0m                     [0m[90m│[0m[1m[36m│[0m[90m.....[0m
[0m[1m[36m│[0m[90m   7 [0m[97m}[0m                                          [0m[90m│[0m[1m[36m│[0m[90m.....[0m









[0m[1m[30m[46m REV [0m[1m[97m[100m (unnamed) [0m[97m[100m[scratch]                                                                           [0m
