snapshots/stoat/tui/stoat__test_harness__review_multi_file_navigation.snap
---
source: stoat/src/test_harness.rs
assertion_line: 316
expression: text
---
actions: n
focused: #1 of 1
mode: review
size: 80x20
---
[0m[33ma.rs --- 1/1 --- rust[0m                  [0m[90m│[0m
[0m[90m    1 [0m[97mfn [0m[31ma[0m[97m() {}[0m                        [0m[90m│    1 [0m[97mfn [0m[32ma_renamed[0m[97m() {}[0m
[0m[33mb.rs --- 1/1 --- rust[0m                  [0m[90m│[0m
[0m[1m[36m│[0m[90m   1 [0m[97mlet x = 1;[0m                       [0m[90m│[0m[1m[36m│[0m[90m   1 [0m[97mlet x = 1;[0m
[0m[1m[36m│[0m[90m.....[0m                                 [0m[90m│[0m[1m[36m│[0m[90m   2 [0m[97mlet [0m[32my[0m[97m = [0m[32m2[0m[97m;[0m














[0m[1m[30m[46m REV [0m[1m[97m[100m (unnamed) [0m[97m[100m[scratch]                                                       [0m
